GH-2956: use standard JDK instead of commons fileutils (#3300)
Signed-off-by:Bart Hanssens <bart.hanssens@bosa.fgov.be>